--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 <resources>
-    <string name="advanced_settings">Samsung Parts</string>
+    <string name="advanced_settings">Mediatek Parts</string>
     <string name="advanced_settings_summary">Extra Settings</string>
 	
 	<!-- Vibration -->
